--- a/virtual-keyboard/css/style.css
+++ b/virtual-keyboard/css/style.css
@@ -19,6 +19,7 @@ body {
   margin: 20px 0px;
   text-align: center;
   font-size: 22px;
+  color: rgb(20, 15, 122);
 }
 
 .textarea {
@@ -31,6 +32,7 @@ body {
   height: auto;
   background-color: rgb(85, 157, 196);
   overflow: hidden;
+  font-size: 18px;
 }
 
 .key-block {
@@ -43,58 +45,72 @@ body {
 }
 
 .key {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 40px;
   height: 40px;
   gap: 5px;
   border-radius: 2px;
   background-color: rgb(7, 202, 220);
+  color: rgb(20, 15, 122);
 }
 
 .backspace {
   width: 100px;
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .tab {
   width: 50px;
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .del {
   width: 44px;
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .caps {
   width: 100px;
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .enter {
   width: 86px;
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .shift-l {
   width: 100px;
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .shift-r {
   width: 86px;
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .ctrl {
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .win {
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .alt {
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .space {
@@ -103,14 +119,17 @@ body {
 
 .arr-t {
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .arr-l {
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .arr-b {
   background-color: rgb(0, 173, 196);
+  font-weight: bolder;
 }
 
 .arr-r {
